// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component PossiblyMyRecords renders active filters 1`] = `
<StandardPage
  title="Claim possible works"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        text={
          <div>
            <p>
              No works were automatically matched for you to claim.
            </p>
          </div>
        }
        title="No matching works found"
      >
        <div>
          <p>
            No works were automatically matched for you to claim.
          </p>
        </div>
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      smDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm={3}
      >
        <WithStyles(StandardRighthandCard)
          title="Refine results"
        >
          <Memo(FacetsFilter)
            activeFacets={
              Object {
                "filters": Object {},
                "ranges": Object {
                  "Year": Object {
                    "from": 2000,
                    "to": 2010,
                  },
                },
              }
            }
            disabled={false}
            excludeFacetsList={
              Array [
                "Scopus document type",
                "Genre",
                "Year published",
              ]
            }
            facetsData={Object {}}
            lookupFacetsList={
              Object {
                "Author": "Author (lookup)",
                "Collection": "Collection (lookup)",
                "Subject": "Subject (lookup)",
              }
            }
            onFacetsChanged={[Function]}
            renameFacetsList={
              Object {
                "Display type": "Work type",
                "Subtype": "Work subtype",
              }
            }
          />
        </WithStyles(StandardRighthandCard)>
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
  </WithStyles(ForwardRef(Grid))>
</StandardPage>
`;

exports[`Component PossiblyMyRecords renders alert when the hide pub api fails 1`] = `
<StandardPage
  title="Claim possible works"
>
  <Alert
    allowDismiss={false}
    customIcon={null}
    customType={null}
    disableAlertClick={false}
    dismissTitle="Click to dismiss this alert"
    message="Error has occurred during request and request cannot be processed. Test error message Please contact eSpace administrators or try again later."
    showLoader={false}
    title="Error"
    type="error"
    wiggle={null}
  />
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        text={
          <div>
            <p>
              No works were automatically matched for you to claim.
            </p>
          </div>
        }
        title="No matching works found"
      >
        <div>
          <p>
            No works were automatically matched for you to claim.
          </p>
        </div>
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</StandardPage>
`;

exports[`Component PossiblyMyRecords renders list of publications and counts and facets 1`] = `
<StandardPage
  title="Claim possible works"
>
  <WithStyles(ConfirmDialogBox)
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to hide selected possible work from this view?",
        "confirmationTitle": "Hide work",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={9}
      xs={12}
    >
      <StandardCard
        noHeader={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={true}
        >
          <WithStyles(ForwardRef(Typography))>
            3 out of 5 potential match(es) displayed. Select any item to claim it as your work.
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          style={
            Object {
              "marginTop": 16,
            }
          }
          xs={true}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={true}
          >
            <Memo(PublicationsList)
              customActions={
                Array [
                  Object {
                    "handleAction": [Function],
                    "label": "Claim this work",
                    "primary": true,
                  },
                  Object {
                    "handleAction": [Function],
                    "label": "Not mine",
                  },
                ]
              }
              publicationsList={
                Array [
                  1,
                  2,
                  3,
                ]
              }
              publicationsLoading={false}
              subsetCustomActions={
                Array [
                  Object {
                    "disabled": true,
                    "label": "In progress",
                    "primary": false,
                  },
                ]
              }
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      smDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm={3}
      >
        <WithStyles(StandardRighthandCard)
          title="Refine results"
        >
          <Memo(FacetsFilter)
            activeFacets={
              Object {
                "filters": Object {},
                "ranges": Object {},
              }
            }
            disabled={false}
            excludeFacetsList={
              Array [
                "Scopus document type",
                "Genre",
                "Year published",
              ]
            }
            facetsData={
              Object {
                "Display type": Object {
                  "buckets": Array [
                    Object {
                      "doc_count": 95,
                      "key": 179,
                    },
                    Object {
                      "doc_count": 34,
                      "key": 130,
                    },
                    Object {
                      "doc_count": 2,
                      "key": 177,
                    },
                    Object {
                      "doc_count": 2,
                      "key": 183,
                    },
                    Object {
                      "doc_count": 1,
                      "key": 174,
                    },
                  ],
                  "doc_count_error_upper_bound": 0,
                  "sum_other_doc_count": 3,
                },
                "Keywords": Object {
                  "buckets": Array [
                    Object {
                      "doc_count": 15,
                      "key": "Brca1",
                    },
                    Object {
                      "doc_count": 15,
                      "key": "Oncology",
                    },
                    Object {
                      "doc_count": 13,
                      "key": "Breast cancer",
                    },
                    Object {
                      "doc_count": 12,
                      "key": "Genetics & Heredity",
                    },
                    Object {
                      "doc_count": 10,
                      "key": "Biochemistry & Molecular Biology",
                    },
                  ],
                  "doc_count_error_upper_bound": 0,
                  "sum_other_doc_count": 641,
                },
              }
            }
            lookupFacetsList={
              Object {
                "Author": "Author (lookup)",
                "Collection": "Collection (lookup)",
                "Subject": "Subject (lookup)",
              }
            }
            onFacetsChanged={[Function]}
            renameFacetsList={
              Object {
                "Display type": "Work type",
                "Subtype": "Work subtype",
              }
            }
          />
        </WithStyles(StandardRighthandCard)>
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
  </WithStyles(ForwardRef(Grid))>
</StandardPage>
`;

exports[`Component PossiblyMyRecords renders loading component while loading publication data 1`] = `
<StandardPage
  title="Claim possible works"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={true}
    />
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <WithStyles(InlineLoader)
        message="Searching for possibly your works"
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={true}
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  />
</StandardPage>
`;

exports[`Component PossiblyMyRecords renders loading screen while loading publication counts 1`] = `
<StandardPage
  title="Claim possible works"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={true}
    />
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <WithStyles(InlineLoader)
        message="Searching for possibly your works"
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={true}
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  />
</StandardPage>
`;

exports[`Component PossiblyMyRecords renders no results 1`] = `
<StandardPage
  title="Claim possible works"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        text={
          <div>
            <p>
              No works were automatically matched for you to claim.
            </p>
          </div>
        }
        title="No matching works found"
      >
        <div>
          <p>
            No works were automatically matched for you to claim.
          </p>
        </div>
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</StandardPage>
`;

exports[`Component PossiblyMyRecords renders nothing while account is loading 1`] = `""`;

exports[`Component PossiblyMyRecords should generate <Alert> when appropriate 1`] = `
<Alert
  allowDismiss={false}
  customIcon={null}
  customType={null}
  disableAlertClick={false}
  dismissTitle="Click to dismiss this alert"
  message={null}
  showLoader={false}
  type="error"
  wiggle={null}
/>
`;

exports[`Component PossiblyMyRecords should generate <Alert> when appropriate 2`] = `
<Alert
  allowDismiss={false}
  customIcon={null}
  customType={null}
  disableAlertClick={false}
  dismissTitle="Click to dismiss this alert"
  message="Alert: test message"
  showLoader={false}
  type="error"
  wiggle={null}
/>
`;
